data/exec-logs/github/toramky_automobile-dataset/linear-model-for-price-prediction.exec.log
  File "linear-model-for-price-prediction.py", line 67
    imp = SimpleImputer(missing_values='NaN', strategy=""constant"")
                                                                ^
SyntaxError: invalid syntax
